// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with 90s mode 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        data-cy="about-link"
      >
        About
      </a>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <img
        alt="Frog reading news"
        src="newspaperfrog.gif"
      />
      <img
        alt="Wacky News Reader Header"
        src="wordart.png"
      />
      <img
        alt="Flipping newspaper"
        src="newspaper.gif"
      />
      <h6
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with initial state 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-flex-end"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        data-cy="about-link"
      >
        About
      </a>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <h1
        class="MuiTypography-root MuiTypography-h2 MuiTypography-alignCenter"
      >
        🗞️ Wacky News Reader 🗞️
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      />
    </div>
  </div>
</DocumentFragment>
`;
